--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>Todo List</title>
-	<script type="text/javascript" src="assets/js/lib/jquery-3.2.1.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="assets/css/todos.css">
+	<script type="text/javascript" src="todolist/assets/js/lib/jquery-3.2.1.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="todolist/assets/css/todos.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -20,6 +20,6 @@
 	</div>
 
 
-<script type="text/javascript" src="assets/js/todos.js"></script>
+<script type="text/javascript" src="todolist/assets/js/todos.js"></script>
 </body>
 </html>
